--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "license": "MIT",
   "type": "module",
   "dependencies": {
+    "dot": "^1.1.3",
+    "dotenv": "^8.2.0",
+    "env": "^0.0.2",
     "express": "^4.17.1",
     "mongoose": "^5.11.13"
   },
